# NLP

./: .gitignore  pyproject.toml
.github/workflows/: main.yml
my_nlp/: cbow_learn.py  main.py
my_nlp/ch2/common/: util.py
my_nlp/ch3/: cbow_learn.py  simple_cbow.py  train.py
my_nlp/ch4/: negative_sampling_layer.py
my_nlp/common/: layers.py  util.py
my_nlp/tutorial/: char_rnn.ipynb
tests/: test_my_nlp.py  test_util.py
