[tool.poetry]
name = "my_nlp"
version = "0.1.0"
description = ""
authors = ["rmasutani <masutanirugby@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
jax = "^0.2.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.8.0"
autoflake = "^1.4"
mock = "^4.0.3"
mypy = "^0.812"
responses = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
